# trading-bot

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: trading-bot-ci.yml
src/: bot.py
terraform/: main.tf  provider.tf
